readme and changed index.html

--- a/templates/index.html
+++ b/templates/index.html
@@ -27,7 +27,6 @@
     <div class="row">
       <div class="col-xs-12  col-md-9">
         <div id="scatter">
-          <!-- We append our chart here. -->
         </div>
       </div>
     </div>
@@ -36,7 +35,7 @@
           <br>
           <hr>
         <div class="article">
-          <h2>Correlations Discovered Between Health Risks and Age, Income</h2>
+          <h2>Correlations Discovered Between Health Risks and Income</h2>
           <p>Comparing life expectancies of Americans at opposite ends of the wealth spectrum, as The New York Times did in 2014,
             provides an extreme case that income and health are intertwined. But your income affects your health no matter how 
             much money you make, said Laudan Aron of the Urban Institute, a nonpartisan think tank.</p>
@@ -52,7 +51,7 @@
             is two times the Federal Poverty Level, you get on average two more years of life than someone whose family income is
             less than the Federal Poverty Level, and on up the scale. It seems money can buy you more time alive.</p>
 
-          <p>- from https://www.businessinsider.com/how-income-affects-health-2015-4</p>
+          <p><b>- from https://www.businessinsider.com/how-income-affects-health-2015-4</b></p>
     
         </div>
       </div>
